ifcviewer/ifcengine/include/ifcengine.h


typedef	int_t			* SdaiAggr;
typedef	void			* SdaiAttr;
typedef	int_t			SdaiEntity;
typedef	int_t			SdaiInstance;
typedef	int_t			SdaiInteger;
typedef	int_t			SdaiModel;
typedef	int_t			SdaiPrimitiveType;
typedef	void			* SdaiADB;
typedef	int_t			SdaiNPL;
typedef	int64_t			ExpressID;
void			DECL STDC	sdaiInsertByIndex(
									const SdaiAggr			aggregate,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiInsertByIndex(
								const SdaiAggr			aggregate,
								SdaiInteger				index,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiInsertByIndex(
					aggregate,
					index,
					valueType,
					(const void*) value
				);
}
SdaiADB			DECL STDC	sdaiCreateADB(
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	SdaiADB	sdaiCreateADB(
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiCreateADB(
					valueType,
					(const void*) value
				);
}
SdaiAggr		DECL STDC	sdaiCreateAggr(
									SdaiInstance			instance,
									const SdaiAttr			attribute
								);
SdaiAggr		DECL STDC	sdaiCreateAggrBN(
									SdaiInstance			instance,
									const char				* attributeName
								);
static	inline	SdaiAggr	sdaiCreateAggrBN(
									SdaiInstance			instance,
									char					* attributeName
								)
{
	return	sdaiCreateAggrBN(
					instance,
					(const char*) attributeName
				);
}
SdaiNPL			DECL STDC	sdaiCreateNPL(
								);
void			DECL STDC	sdaiDeleteNPL(
									SdaiNPL					list
								);
SdaiAggr		DECL STDC	sdaiCreateNestedAggr(
									const SdaiAggr			aggregate
								);
SdaiInstance	DECL STDC	sdaiCreateInstance(
									SdaiModel				model,
									SdaiEntity				entity
								);
SdaiInstance	DECL STDC	sdaiCreateInstanceBN(
									SdaiModel				model,
									const char				* entityName
								);
static	inline	SdaiInstance	sdaiCreateInstanceBN(
										SdaiModel				model,
										char					* entityName
									)
{
	return	sdaiCreateInstanceBN(
					model,
					(const char*) entityName
				);
}
void			DECL STDC	sdaiDeleteInstance(
									SdaiInstance			instance
								);
void			DECL STDC	sdaiPutADBTypePath(
									const SdaiADB			ADB,
									int_t					pathCount,
									const char				* path
								);
static	inline	void	sdaiPutADBTypePath(
								const SdaiADB			ADB,
								int_t					pathCount,
								char					* path
							)
{
	return	sdaiPutADBTypePath(
					ADB,
					pathCount,
					(const char*) path
				);
}
void			DECL STDC	sdaiPutAttr(
									SdaiInstance			instance,
									const SdaiAttr			attribute,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiPutAttr(
								SdaiInstance			instance,
								const SdaiAttr			attribute,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiPutAttr(
					instance,
					attribute,
					valueType,
					(const void*) value
				);
}
void			DECL STDC	sdaiPutAttrBN(
									SdaiInstance			instance,
									const char				* attributeName,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiPutAttrBN(
								SdaiInstance			instance,
								char					* attributeName,
								SdaiPrimitiveType		valueType,
								const void				* value
							)
{
	return	sdaiPutAttrBN(
					instance,
					(const char*) attributeName,
					valueType,
					value
				);
}
static	inline	void	sdaiPutAttrBN(
								SdaiInstance			instance,
								const char				* attributeName,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiPutAttrBN(
					instance,
					attributeName,
					valueType,
					(const void*) value
				);
}
void			DECL STDC	sdaiUnsetAttr(
									SdaiInstance			instance,
									const SdaiAttr			attribute
								);
void			DECL STDC	sdaiUnsetAttrBN(
									SdaiInstance			instance,
									const char				* attributeName
								);
static	inline	void	sdaiUnsetAttrBN(
								SdaiInstance			instance,
								char					* attributeName
							)
{
	return	sdaiUnsetAttrBN(
					instance,
					(const char*) attributeName
				);
}
void			DECL STDC	engiSetComment(
									SdaiInstance			instance,
									const char				* comment
								);
static	inline	void	engiSetComment(
								SdaiInstance			instance,
								char					* comment
							)
{
	return	engiSetComment(
					instance,
					(const char*) comment
				);
}
ExpressID		DECL STDC	engiGetInstanceLocalId(
									SdaiInstance			instance
								);
int_t			DECL STDC	sdaiTestAttr(
									SdaiInstance			instance,
									const SdaiAttr			attribute
								);
int_t			DECL STDC	sdaiTestAttrBN(
									SdaiInstance			instance,
									const char				* attributeName
								);
static	inline	int_t	sdaiTestAttrBN(
								SdaiInstance			instance,
								char					* attributeName
							)
{
	return	sdaiTestAttrBN(
					instance,
					(const char*) attributeName
				);
}
SdaiInstance	DECL STDC	sdaiCreateInstanceEI(
									SdaiModel				model,
									SdaiEntity				entity,
									ExpressID				expressID
								);